Menambahkan data baru

--- a/siega.html
+++ b/siega.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Selamat datang di SIEGA</h1>
+    <p>List program studi di SIEGA:</p>
     <ul>
         <li>Program Studi</li>
         <li>Sistem Informasi</li>
